--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="header">
@@ -20,7 +21,7 @@
         </nav>
         <div class="contacts menu__contacts">
           <a href="tel:7999783299" class="phone contacts__phone">+7 (999) 768-32-99</a>
-          <button class="button contacts__button--primary">Заказать звонок</button>
+          <button class="button contacts__button button--primary">Заказать звонок</button>
         </div>
       </div>
     </div>
