feat: add fonts Futura Book & Demi, refact: add scss in gulpfile

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
       </div>
 
-      <a href="#" class="scroll-down"></a>
+      <a href="#" class="scroll-down">листайте вниз</a>
     </section>
 
   </main>
