--- a/index.html
+++ b/index.html
@@ -49,5 +49,18 @@
     </section>
 
   </main>
+
+  <section class="section control">
+    <div class="container">
+      <div class="section-title">
+        <h2 class="section-title__heading">Онлайн контроль</h2>
+        <div class="section-title__img">
+          <img src="img/camera.svg" alt="video">
+        </div>
+      </div>
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.section control -->
 </body>
 </html>
