--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
       <a href="#" class="hero__scroll-down">листайте вниз</a>
     </section>
 
-  </main>
 
   <section class="section control">
     <div class="container">
@@ -62,5 +61,86 @@
     <!-- /.container -->
   </section>
   <!-- /.section control -->
+
+  <section class="section types">
+    <div class="container">
+      <div class="section-title types__section-title">
+        <h2 class="section-title__heading">Виды ремонта</h2>
+        <div class="section-title__img">
+          <img src="img/repair.svg" alt="repair">
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="col">
+          <div class="card types__card">
+            <img src="img/types/redecorating.jpg" alt="Косметический ремонт" class="card__img">
+            <div class="card__text">
+              <h3 class="card__title">Косметический ремонт</h3>
+              <ul class="card__list">
+                <li class="card__item">Демонтаж старых покрытий</li>
+                <li class="card__item">Поклейка обоев</li>
+                <li class="card__item">Роспись стен и потолков</li>
+                <li class="card__item">Укладка полов</li>
+                <li class="card__item">Замена сантехники</li>
+                <li class="card__item">Замена розеток и выключателей</li>
+                <li class="card__item">Замена дверей</li>
+              </ul>
+              <strong class="card__pricetag">
+                от 900 руб / m<sup>2</sup>
+              </strong>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card types__card">
+            <img src="img/types/overhaul.jpg" alt="Капитальный ремонт" class="card__img">
+            <div class="card__text">
+              <h3 class="card__title">Капитальный ремонт</h3>
+              <ul class="card__list">
+                <li class="card__item">Демонтаж старых покрытий</li>
+                <li class="card__item">Поклейка обоев</li>
+                <li class="card__item">Роспись стен и потолков</li>
+                <li class="card__item">Укладка полов</li>
+                <li class="card__item">Замена сантехники</li>
+                <li class="card__item">Замена розеток и выключателей</li>
+                <li class="card__item">Замена дверей</li>
+              </ul>
+              <strong class="card__pricetag">
+                от 1800 руб / m<sup>2</sup>
+              </strong>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card types__card">
+            <img src="img/types/design_repair.jpg" alt="Дизайнерский ремонт" class="card__img">
+            <div class="card__text">
+              <h3 class="card__title">Дизайнерский ремонт</h3>
+              <ul class="card__list">
+                <li class="card__item">Демонтаж старых покрытий</li>
+                <li class="card__item">Поклейка обоев</li>
+                <li class="card__item">Роспись стен и потолков</li>
+                <li class="card__item">Укладка полов</li>
+                <li class="card__item">Замена сантехники</li>
+                <li class="card__item">Замена розеток и выключателей</li>
+                <li class="card__item">Замена дверей</li>
+              </ul>
+              <strong class="card__pricetag">
+                от 4000 руб / m<sup>2</sup>
+              </strong>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+  <!-- /.section types -->
+
+  </main>
 </body>
 </html>
