--- a/index.html
+++ b/index.html
@@ -141,6 +141,97 @@
   </section>
   <!-- /.section types -->
 
+  <section class="section design-project">
+    <div class="container">
+
+      <div class="section-title design-project__section-title">
+        <h2 class="section-title__heading">Дизайн проект</h2>
+        <div class="section-title__img">
+          <img src="img/desing_project/pencil.svg" alt="pencil">
+        </div>
+      </div>
+
+      <div class="design-project__description description">
+        <div class="description__text">
+          <p>Дизайн-проект не только помогает сделать ремонт вашей квартиры более современным, но и значительно
+            удешевляет
+            материалы и сокращает время ремонтных работ</p>
+        </div>
+      </div>
+
+      <div class="row">
+
+        <div class="col">
+          <div class="card design-project__card">
+            <img src="img/desing_project/redecorating.jpg" alt="Минимальный" class="card__img">
+            <div class="card__text">
+              <h3 class="card__title">Минимальный</h3>
+              <ul class="card__list">
+                <li class="card__item">Измерительные чертежи</li>
+                <li class="card__item">Перепланировка</li>
+                <li class="card__item">Планировка мебели</li>
+                <li class="card__item">Сантехнический план</li>
+              </ul>
+              <strong class="card__pricetag">
+               150 руб / m<sup>2</sup>
+              </strong>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card design-project__card">
+            <img src="img/desing_project/design_repair.jpg" alt="Стандартный" class="card__img">
+            <div class="card__text">
+              <h3 class="card__title">Стандартный</h3>
+              <ul class="card__list">
+                <li class="card__item">Измерительные чертежи</li>
+                <li class="card__item">Перепланировка</li>
+                <li class="card__item">Планировка мебели</li>
+                <li class="card__item">План потолков</li>
+                <li class="card__item">План этажей</li>
+                <li class="card__item">План электрики</li>
+                <li class="card__item">План света</li>
+              </ul>
+              <strong class="card__pricetag">
+                400 руб / m<sup>2</sup>
+              </strong>
+            </div>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card design-project__card">
+            <img src="img/desing_project/full_design_project.jpg" alt="Полный" class="card__img">
+            <div class="card__text">
+              <h3 class="card__title">Полный</h3>
+              <ul class="card__list">
+                <li class="card__item">Измерительные чертежи</li>
+                <li class="card__item">Перепланировка</li>
+                <li class="card__item">Планировка мебели</li>
+                <li class="card__item">План потолков</li>
+                <li class="card__item">План этажей</li>
+                <li class="card__item">План электрики</li>
+                <li class="card__item">План света</li>
+                <li class="card__item">Стенные развертки</li>
+                <li class="card__item">3D визуализация</li>
+                <li class="card__item">Смета на материалы</li>
+                <li class="card__item">Выезд на подбор материалов</li>
+                <li class="card__item">Выбор мебели</li>
+              </ul>
+              <strong class="card__pricetag">
+                900 руб / m<sup>2</sup>
+              </strong>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </section>
+  <!-- /.section design-project -->
+
   </main>
 </body>
 </html>
