--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="section-title types__section-title">
         <h2 class="section-title__heading">Виды ремонта</h2>
         <div class="section-title__img">
-          <img src="img/repair.svg" alt="repair">
+          <img src="img/repair.svg" alt="repair" width="22" height="22">
         </div>
       </div>
 
@@ -147,7 +147,7 @@
       <div class="section-title design-project__section-title">
         <h2 class="section-title__heading">Дизайн проект</h2>
         <div class="section-title__img">
-          <img src="img/desing_project/pencil.svg" alt="pencil">
+          <img src="img/desing_project/pencil.svg" alt="pencil" width="22" height="22">
         </div>
       </div>
 
