--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
         <div class="contacts menu__contacts">
           <a href="tel:7999783299" class="phone contacts__phone">+7 (999) 768-32-99</a>
-          <button class="button contacts__button button--primary">Заказать звонок</button>
+          <button data-toggle="modal" class="button contacts__button button--primary">Заказать звонок</button>
         </div>
       </div>
     </div>
@@ -40,7 +40,7 @@
           <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от
             стоимости материалов
             за счет организации работы</p>
-          <button class="button hero__button button--primary">Рассчитать стоимость</button>
+          <button class="button hero__button button--primary" data-toggle="modal">Рассчитать стоимость</button>
           <button class="button hero__button button--outline">Отправить заявку</button>
         </div>
       </div>
@@ -264,5 +264,8 @@
     <!-- /.modal-dialog -->
   </div>
   <!-- /.modal -->
+
+
+  <script src="js/main.js"></script>
 </body>
 </html>
