--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -48,6 +49,111 @@
       <a href="#" class="hero__scroll-down">листайте вниз</a>
     </section>
 
+  <section class="section section--dark projects">
+    <div class="container">
+      <div class="row">
+        <div class="col-50">
+          <div class="section-title section-title--left">
+            <h2 class="section-title__heading section-title__heading--primary">Завершенные <span class="section-title__word">проекты</span></h2>
+          <p class="section-title__text">На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей компанией. За 14 лет работы на строительном рынке мы осчастливили более 1000 семей</p>
+          </div>
+
+          <!-- Slider main container -->
+          <div class="swiper-container">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper swiper-no-swiping">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Город:</h3>
+                  <span class="swiper-slide__value">Ростов-на-дону<br>ЖК Адмирал</span>
+                </div>
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Площадь:</h3>
+                  <span class="swiper-slide__value">81 м2</span>
+                </div>
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Срок ремонта:</h3>
+                  <span class="swiper-slide__value">3,5 месяца</span>
+                </div>
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Стоимость:</h3>
+                  <span class="swiper-slide__value">По запросу</span>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Город:</h3>
+                  <span class="swiper-slide__value">Москва<br>ЖК Династия</span>
+                </div>
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Площадь:</h3>
+                  <span class="swiper-slide__value">102 м2</span>
+                </div>
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Срок ремонта:</h3>
+                  <span class="swiper-slide__value">4 месяца</span>
+                </div>
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Стоимость:</h3>
+                  <span class="swiper-slide__value">По запросу</span>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Город:</h3>
+                  <span class="swiper-slide__value">Волгоград<br>ЖК Адмирал</span>
+                </div>
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Площадь:</h3>
+                  <span class="swiper-slide__value">70 м2</span>
+                </div>
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Срок ремонта:</h3>
+                  <span class="swiper-slide__value">2,5 месяца</span>
+                </div>
+                <div class="swiper-slide__text">
+                  <h3 class="swiper-slide__heading">Стоимость:</h3>
+                  <span class="swiper-slide__value">По запросу</span>
+                </div>
+              </div>
+              
+            </div>
+
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev swiper-no-swiping"></div>
+            <div class="swiper-pagination swiper-no-swiping"></div>
+            <div class="swiper-button-next swiper-no-swiping"></div>
+          </div>
+
+        </div>
+        <!-- /.col-50 -->
+        <div class="col-50">
+          <!-- Slider main container -->
+          <div class="swiper-container">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper swiper-no-swiping">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <img src="../img/project.jpg" alt="project">
+              </div>
+              <div class="swiper-slide">
+                <img src="../img/project.jpg" alt="project">
+              </div>
+              <div class="swiper-slide">
+                <img src="../img/project.jpg" alt="project">
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- /.col-50 -->
+      </div>
+      <!-- /.row -->
+    </div>
+    <!-- /.container -->
+  </section>
+  <!-- /.section projects -->
+
 
   <section class="section control">
     <div class="container">
@@ -73,7 +179,7 @@
 
       <div class="row">
 
-        <div class="col">
+        <div class="col-30">
           <div class="card types__card">
             <img src="img/types/redecorating.jpg" alt="Косметический ремонт" class="card__img">
             <div class="card__text">
@@ -94,7 +200,7 @@
           </div>
         </div>
 
-        <div class="col">
+        <div class="col-30">
           <div class="card types__card">
             <img src="img/types/overhaul.jpg" alt="Капитальный ремонт" class="card__img">
             <div class="card__text">
@@ -115,7 +221,7 @@
           </div>
         </div>
 
-        <div class="col">
+        <div class="col-30">
           <div class="card types__card">
             <img src="img/types/design_repair.jpg" alt="Дизайнерский ремонт" class="card__img">
             <div class="card__text">
@@ -161,7 +267,7 @@
 
       <div class="row">
 
-        <div class="col">
+        <div class="col-30">
           <div class="card design-project__card">
             <img src="img/desing_project/redecorating.jpg" alt="Минимальный" class="card__img">
             <div class="card__text">
@@ -179,7 +285,7 @@
           </div>
         </div>
 
-        <div class="col">
+        <div class="col-30">
           <div class="card design-project__card">
             <img src="img/desing_project/design_repair.jpg" alt="Стандартный" class="card__img">
             <div class="card__text">
@@ -200,7 +306,7 @@
           </div>
         </div>
 
-        <div class="col">
+        <div class="col-30">
           <div class="card design-project__card">
             <img src="img/desing_project/full_design_project.jpg" alt="Полный" class="card__img">
             <div class="card__text">
@@ -265,8 +371,10 @@
   </div>
   <!-- /.modal -->
 
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+ 
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
