--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <title>Document</title>
   <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+  <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="header">
     <div class="container">
       <div class="menu">
-        <div class="logo menu__logo">Repair Design Project</div>
+        <div class="logo menu__logo wow fadeInRight">Repair Design Project</div>
         <nav class="nav menu__nav">
           <a href="#" class="nav__item">Главная</a>
           <a href="#" class="nav__item">Проекты</a>
@@ -37,23 +38,28 @@
       
       <div class="container">
         <div class="hero__content">
-          <h1 class="title hero__title">Турецкий ремонт в&nbsp;<span class="title--primary">Ростове-на-дону</span></h1>
-          <p class="hero__text">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от
+          <h1 class="title hero__title wow fadeInRight" data-wow-delay="0.1s">Турецкий ремонт в&nbsp;<span
+              class="title--primary">Ростове-на-дону</span></h1>
+          <p class="hero__text wow fadeInRight" data-wow-delay=" 0.3s">Получите готовый ремонт под ключ в срок с
+            экономией рабочего времени до
+            45 дней и 20% от
             стоимости материалов
             за счет организации работы</p>
-          <button class="button hero__button button--primary" data-toggle="modal">Рассчитать стоимость</button>
-          <button class="button hero__button button--outline">Отправить заявку</button>
+          <button class="button hero__button button--primary wow fadeInRight" data-toggle="modal" data-wow-delay="0.5s">Рассчитать
+            стоимость</button>
+          <button class="button hero__button button--outline wow fadeInRight" data-wow-delay="0.5s">Отправить заявку</button>
         </div>
       </div>
 
-      <a href="#" class="hero__scroll-down">листайте вниз</a>
+      <a href="#" class="hero__scroll-down wow pulse" data-wow-delay="3.5s" data-wow-iteration="3"
+        data-wow-duration="2s">листайте вниз</a>
     </section>
 
   <section class="section section--dark projects">
     <div class="container">
       <div class="row">
         <div class="col-50">
-          <div class="section-title section-title--left">
+          <div class="section-title section-title--left wow fadeInUp" data-wow-offset="50">
             <h2 class="section-title__heading section-title__heading--primary">Завершенные <span class="section-title__word">проекты</span></h2>
           <p class="section-title__text">На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей компанией. За 14 лет работы на строительном рынке мы осчастливили более 1000 семей</p>
           </div>
@@ -64,7 +70,7 @@
             <div class="swiper-wrapper swiper-no-swiping">
               <!-- Slides -->
               <div class="swiper-slide">
-                <div class="swiper-slide__text">
+                <div class="swiper-slide__text slide__text">
                   <h3 class="swiper-slide__heading">Город:</h3>
                   <span class="swiper-slide__value">Ростов-на-дону<br>ЖК Адмирал</span>
                 </div>
@@ -121,9 +127,9 @@
             </div>
 
             <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev swiper-no-swiping"></div>
-            <div class="swiper-pagination swiper-no-swiping"></div>
-            <div class="swiper-button-next swiper-no-swiping"></div>
+              <div class="swiper-button-prev swiper-no-swiping"></div>
+              <div class="swiper-pagination swiper-no-swiping"></div>
+              <div class="swiper-button-next swiper-no-swiping"></div>
           </div>
 
         </div>
@@ -134,13 +140,13 @@
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper swiper-no-swiping">
               <!-- Slides -->
-              <div class="swiper-slide">
+              <div class="swiper-slide swiper-slide__img">
                 <img src="../img/project.jpg" alt="project">
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide swiper-slide__img">
                 <img src="../img/project.jpg" alt="project">
               </div>
-              <div class="swiper-slide">
+              <div class="swiper-slide swiper-slide__img">
                 <img src="../img/project.jpg" alt="project">
               </div>
             </div>
@@ -157,12 +163,45 @@
 
   <section class="section control">
     <div class="container">
-      <div class="section-title">
+      <div class="section-title section-title--light control__section-title wow fadeInUp" data-wow-offset="50">
         <h2 class="section-title__heading">Онлайн контроль</h2>
         <div class="section-title__img">
           <img src="img/camera.svg" alt="video">
         </div>
       </div>
+
+      <div class="control__video video">
+        <img src="../img/play-icon.svg" alt="play" class="video__play">
+      </div>
+      <!-- /.control__video video -->
+
+      <p class="control__text">
+        На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В любой момент вы можете зайти
+        на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую трансляцию с одного из наших объектов!
+        Оставьте заявку ниже чтобы получить ссылку на трансляцию.
+      </p>
+
+       <form action="#" class="form control__form">
+
+         <div class="control__input-group">
+           <label for="user-name" class="label form__label control__label">Имя</label>
+           <input type="text" class="input--dark form__input control__input" id="user-name" placeholder="Как вас зовут:">
+         </div>
+
+         <div class="control__input-group">
+           <label for="user-phone" class="label form__label control__label">Телефон</label>
+           <input type="tel" class="input--dark form__input control__input" id="user-phone" placeholder="Ваш номер телефона:">
+         </div>
+
+         <button class="button button--primary control__button">Отправить</button>
+       
+         <div class="policy control__policy">
+           <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
+           <label for="policy-checkbox" class="policy__label control__policy-label">Я соглашаюсь с обработкой данных</label>
+         </div>
+         <!-- /.policy -->
+        </form>
+
     </div>
     <!-- /.container -->
   </section>
@@ -170,7 +209,7 @@
 
   <section class="section types">
     <div class="container">
-      <div class="section-title types__section-title">
+      <div class="section-title types__section-title wow fadeInUp" data-wow-offset="50">
         <h2 class="section-title__heading">Виды ремонта</h2>
         <div class="section-title__img">
           <img src="img/repair.svg" alt="repair" width="22" height="22">
@@ -179,7 +218,7 @@
 
       <div class="row">
 
-        <div class="col-30">
+        <div class="col-30 wow fadeInRight" data-wow-delay="0.2s">
           <div class="card types__card">
             <img src="img/types/redecorating.jpg" alt="Косметический ремонт" class="card__img">
             <div class="card__text">
@@ -200,7 +239,7 @@
           </div>
         </div>
 
-        <div class="col-30">
+        <div class="col-30 wow fadeInRight" data-wow-delay="0.4s">
           <div class="card types__card">
             <img src="img/types/overhaul.jpg" alt="Капитальный ремонт" class="card__img">
             <div class="card__text">
@@ -221,7 +260,7 @@
           </div>
         </div>
 
-        <div class="col-30">
+        <div class="col-30 wow fadeInRight" data-wow-delay="0.6s">
           <div class="card types__card">
             <img src="img/types/design_repair.jpg" alt="Дизайнерский ремонт" class="card__img">
             <div class="card__text">
@@ -250,7 +289,7 @@
   <section class="section design-project">
     <div class="container">
 
-      <div class="section-title design-project__section-title">
+      <div class="section-title design-project__section-title wow fadeInUp" data-wow-offset="50">
         <h2 class="section-title__heading">Дизайн проект</h2>
         <div class="section-title__img">
           <img src="img/desing_project/pencil.svg" alt="pencil" width="22" height="22">
@@ -267,7 +306,7 @@
 
       <div class="row">
 
-        <div class="col-30">
+        <div class="col-30 wow fadeInRight" data-wow-delay="0.2s">
           <div class="card design-project__card">
             <img src="img/desing_project/redecorating.jpg" alt="Минимальный" class="card__img">
             <div class="card__text">
@@ -285,7 +324,7 @@
           </div>
         </div>
 
-        <div class="col-30">
+        <div class="col-30 wow fadeInRight" data-wow-delay="0.4s">
           <div class="card design-project__card">
             <img src="img/desing_project/design_repair.jpg" alt="Стандартный" class="card__img">
             <div class="card__text">
@@ -306,7 +345,7 @@
           </div>
         </div>
 
-        <div class="col-30">
+        <div class="col-30 wow fadeInRight" data-wow-delay="0.6s">
           <div class="card design-project__card">
             <img src="img/desing_project/full_design_project.jpg" alt="Полный" class="card__img">
             <div class="card__text">
@@ -350,13 +389,13 @@
       <form action="#" class="form modal__form">
 
         <label for="user-name" class="label form__label label--light">Имя</label>
-        <input type="text" class="input form__input modal__input" id="user-name" placeholder="Как вас зовут:">
+        <input type="text" class="input input--light form__input modal__input" id="user-name" placeholder="Как вас зовут:">
 
         <label for="user-phone" class="label form__label label--light">Телефон</label>
-        <input type="tel" class="input form__input modal__input" id="user-phone" placeholder="Ваш номер телефона:">
+        <input type="tel" class="input input--light form__input modal__input" id="user-phone" placeholder="Ваш номер телефона:">
 
         <label for="user-email" class="label form__label label--light">Email</label>
-        <input type="email" class="input form__input modal__input" id="user-email" placeholder="Ваш email:">
+        <input type="email" class="input input--light form__input modal__input" id="user-email" placeholder="Ваш email:">
 
         <div class="policy modal__policy">
           <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
@@ -375,6 +414,7 @@
  
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+  <script src="js/wow.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
