--- a/index.html
+++ b/index.html
@@ -415,6 +415,19 @@
 
       </div>
       <!-- /.footer-wrap -->
+      <h3 class="footer__title footer__title--primary">Ростов на дону, Торговый центр Plaza
+        Прямой телефон +7 (999) 768 32 99</h3>
+
+      <div class="footer__links">
+        <a href="#" class="footer-link__email footer-link"></a>
+        <a href="#" class="footer-link__inst footer-link"></a>
+      </div>
+      
+      <div class="map footer__map">
+        <script type="text/javascript" charset="utf-8" async
+          src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4f6cadfa2ff702c90f01110f0d1ce9591436bc14b0cd7663ca9f573bf697f99b&amp;width=70%25&amp;height=430&amp;lang=ru_RU&amp;scroll=false">
+        </script>
+      </div>
     </div>
     <!-- /.container -->
 
