--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8"
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
@@ -15,12 +15,12 @@
       <div class="menu">
         <div class="logo menu__logo wow fadeInRight">Repair Design Project</div>
         <nav class="nav menu__nav">
-          <a href="#" class="nav__item">Главная</a>
-          <a href="#" class="nav__item">Проекты</a>
+          <a href="#main" class="nav__item">Главная</a>
+          <a href="#projects" class="nav__item">Проекты</a>
           <a href="#" class="nav__item">Замер</a>
           <a href="#" class="nav__item">Команда</a>
           <a href="#" class="nav__item">Отзывы</a>
-          <a href="#" class="nav__item">Контакты</a>
+          <a href="#contacts" class="nav__item">Контакты</a>
         </nav>
         <div class="contacts menu__contacts">
           <a href="tel:7999783299" class="phone contacts__phone">+7 (999) 768-32-99</a>
@@ -31,6 +31,7 @@
     <!-- /.container -->
   </header>
   <main>
+    <a name="main"></a>
     <section class="hero">
       <div class="instagram hero__instagram">
         <a href="#" class="instagram__link">instagram</a>
@@ -55,6 +56,7 @@
         data-wow-duration="2s">листайте вниз</a>
     </section>
 
+  <a name="projects"></a>
   <section class="section section--dark projects">
     <div class="container">
       <div class="row">
@@ -415,20 +417,22 @@
 
       </div>
       <!-- /.footer-wrap -->
+      <a name="contacts"></a>
       <h3 class="footer__title footer__title--primary">Ростов на дону, Торговый центр Plaza
         Прямой телефон +7 (999) 768 32 99</h3>
 
-      <div class="footer__links">
-        <a href="#" class="footer-link__email footer-link"></a>
-        <a href="#" class="footer-link__inst footer-link"></a>
-      </div>
+          <div class="footer__links">
+            <a href="#" class="footer-link__email footer-link"></a>
+            <a href="#" class="footer-link__inst footer-link"></a>
+          </div>
+
+          <div class="map footer__map">
+            <script type="text/javascript" charset="utf-8" async
+              src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4f6cadfa2ff702c90f01110f0d1ce9591436bc14b0cd7663ca9f573bf697f99b&amp;width=70%25&amp;height=430&amp;lang=ru_RU&amp;scroll=false">
+            </script>
+          </div>
+        </div>
       
-      <div class="map footer__map">
-        <script type="text/javascript" charset="utf-8" async
-          src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A4f6cadfa2ff702c90f01110f0d1ce9591436bc14b0cd7663ca9f573bf697f99b&amp;width=70%25&amp;height=430&amp;lang=ru_RU&amp;scroll=false">
-        </script>
-      </div>
-    </div>
     <!-- /.container -->
 
     <div class="footer-menu">
@@ -436,12 +440,12 @@
         <div class="menu">
           <div class="logo menu__logo wow fadeInRight">Repair Design Project</div>
           <nav class="nav menu__nav">
-            <a href="#" class="nav__item">Главная</a>
-            <a href="#" class="nav__item">Проекты</a>
+            <a href="#main" class="nav__item">Главная</a>
+            <a href="#projects" class="nav__item">Проекты</a>
             <a href="#" class="nav__item">Замер</a>
             <a href="#" class="nav__item">Команда</a>
             <a href="#" class="nav__item">Отзывы</a>
-            <a href="#" class="nav__item">Контакты</a>
+            <a href="#contacts" class="nav__item">Контакты</a>
           </nav>
           <div class="contacts menu__contacts">
             <a href="tel:7999783299" class="phone contacts__phone">+7 (999) 768-32-99</a>
@@ -459,7 +463,7 @@
       </button>
       <h3 class="modal__title">Оставьте заявку и наш менеджер свяжется с вами </h3>
     
-      <form action="#" class="form modal__form">
+      <form action="send.php" method="POST" class="form modal__form">
 
         <div class="input-group modal__input-group">
           <label for="user-name" class="label form__label label--light">Имя</label>
