--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
          <button class="button button--primary control__button">Отправить</button>
        
          <div class="policy control__policy">
-           <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
-           <label for="policy-checkbox" class="policy__label control__policy-label">Я соглашаюсь с обработкой данных</label>
+           <input type="checkbox" name="policy-checkbox" id="policy-checkbox-control" class="policy__checkbox" checked>
+           <label for="policy-checkbox-control" class="policy__label control__policy-label">Я соглашаюсь с обработкой данных</label>
          </div>
          <!-- /.policy -->
         </form>
@@ -407,8 +407,8 @@
           
 
           <div class="policy footer__policy">
-            <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
-            <label for="policy-checkbox" class="policy__label policy__label--center">Я соглашаюсь с обработкой данных</label>
+            <input type="checkbox" name="policy-checkbox" id="policy-checkbox-footer" class="policy__checkbox" checked>
+            <label for="policy-checkbox-footer" class="policy__label policy__label--center">Я соглашаюсь с обработкой данных</label>
           </div>
           <!-- /.policy -->
           <button class="button button--primary footer__button">Отправить</button>
@@ -482,8 +482,8 @@
         </div>
 
         <div class="policy modal__policy">
-          <input type="checkbox" name="policy-checkbox" id="policy-checkbox" class="policy__checkbox" checked>
-          <label for="policy-checkbox" class="policy__label">Я соглашаюсь с обработкой данных</label>
+          <input type="checkbox" name="policy-checkbox" id="policy-checkbox-modal" class="policy__checkbox" checked>
+          <label for="policy-checkbox-modal" class="policy__label">Я соглашаюсь с обработкой данных</label>
         </div>
         <!-- /.policy -->
         <button class="button button--primary modal__button">Отправить заявку</button>
