fix: fixed footer form position

--- a/thanks.html
+++ b/thanks.html
@@ -14,15 +14,7 @@
   <header class="header">
     <div class="container">
       <div class="menu">
-        <div class="logo menu__logo wow fadeInRight">Repair Design Project</div>
-        <nav class="nav menu__nav">
-          <a href="#main" class="nav__item">Главная</a>
-          <a href="#projects" class="nav__item">Проекты</a>
-          <a href="#" class="nav__item">Замер</a>
-          <a href="#" class="nav__item">Команда</a>
-          <a href="#" class="nav__item">Отзывы</a>
-          <a href="#contacts" class="nav__item">Контакты</a>
-        </nav>
+        <div class="logo menu__logo wow fadeInRight"><a href="#main" class="logo__link">Repair Design Project</a></div>
         <div class="contacts menu__contacts">
           <a href="tel:7999783299" class="phone contacts__phone">+7 (999) 768-32-99</a>
           <button data-toggle="modal" class="button contacts__button button--primary">Заказать звонок</button>
