--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="header">
     <div class="container">
       <div class="menu">
-        <div class="logo menu__logo wow fadeInRight">Repair Design Project</div>
+        <div class="logo menu__logo wow fadeInRight"><a href="#main" class="logo__link">Repair Design Project</a></div>
         <nav class="nav menu__nav" id="menu">
           <a href="#main" class="nav__item">Главная</a>
           <a href="#projects" class="nav__item">Проекты</a>
@@ -48,7 +48,7 @@
             за счет организации работы</p>
           <button class="button hero__button button--primary wow fadeInRight" data-toggle="modal" data-wow-delay="0.5s">Рассчитать
             стоимость</button>
-          <button class="button hero__button button--outline wow fadeInRight" data-wow-delay="0.5s">Отправить заявку</button>
+          <button class="button hero__button button--outline wow fadeInRight" data-toggle="modal" data-wow-delay="0.5s">Отправить заявку</button>
         </div>
       </div>
 
@@ -61,7 +61,7 @@
     <div class="container">
       <div class="row">
         <div class="col-50">
-          <div class="section-title section-title--left wow fadeInUp" data-wow-offset="50">
+          <div class="section-title section-title__projects section-title--left wow fadeInUp" data-wow-offset="50">
             <h2 class="section-title__heading section-title__heading--primary">Завершенные <span class="section-title__word">проекты</span></h2>
           <p class="section-title__text">На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей компанией. За 14 лет работы на строительном рынке мы осчастливили более 1000 семей</p>
           </div>
@@ -198,7 +198,7 @@
          <button class="button button--primary control__button">Отправить</button>
        
          <div class="policy control__policy">
-           <input type="checkbox" name="policy-checkbox" id="policy-checkbox-control" class="policy__checkbox" checked>
+           <input type="checkbox" name="policyCheckbox" id="policy-checkbox-control" class="policy__checkbox" checked>
            <label for="policy-checkbox-control" class="policy__label control__policy-label">Я соглашаюсь с обработкой данных</label>
          </div>
          <!-- /.policy -->
@@ -407,7 +407,7 @@
           
 
           <div class="policy footer__policy">
-            <input type="checkbox" name="policy-checkbox" id="policy-checkbox-footer" class="policy__checkbox" checked>
+            <input type="checkbox" name="policyCheckbox" id="policy-checkbox-footer" class="policy__checkbox" checked>
             <label for="policy-checkbox-footer" class="policy__label policy__label--center">Я соглашаюсь с обработкой данных</label>
           </div>
           <!-- /.policy -->
@@ -435,7 +435,8 @@
     <div class="footer-menu">
       <div class="container">
         <div class="menu">
-          <div class="logo menu__logo wow fadeInRight">Repair Design Project</div>
+          <div class="logo menu__logo wow fadeInRight"><a href="#main" class="logo__link">Repair Design Project</a>
+          </div>
           <nav class="nav menu__nav">
             <a href="#main" class="nav__item">Главная</a>
             <a href="#projects" class="nav__item">Проекты</a>
@@ -478,10 +479,10 @@
             placeholder="Ваш email:">
         </div>
 
-        <div class="policy modal__policy">
-          <input type="checkbox" name="policy-checkbox" id="policy-checkbox-modal" class="policy__checkbox" checked>
-          <label for="policy-checkbox-modal" class="policy__label">Я соглашаюсь с обработкой данных</label>
-        </div>
+          <div class="policy modal__policy">
+            <input type="checkbox" name="policyCheckbox" id="policy-checkbox-modal" class="policy__checkbox" checked>
+            <label for="policy-checkbox-modal" class="policy__label">Я соглашаюсь с обработкой данных</label>
+          </div>
         <!-- /.policy -->
         <button class="button button--primary modal__button">Отправить заявку</button>
       </form>
