refact: fixed pp

--- a/thanks.html
+++ b/thanks.html
@@ -14,7 +14,8 @@
   <header class="header">
     <div class="container">
       <div class="menu">
-        <div class="logo menu__logo wow fadeInRight"><a href="#main" class="logo__link">Repair Design Project</a></div>
+        <div class="logo menu__logo wow fadeInRight"><a href="index.html" class="logo__link">Repair Design Project</a>
+        </div>
         <div class="contacts menu__contacts">
           <a href="tel:7999783299" class="phone contacts__phone">+7 (999) 768-32-99</a>
           <button data-toggle="modal" class="button contacts__button button--primary">Заказать звонок</button>
@@ -24,13 +25,12 @@
     <!-- /.container -->
   </header>
   <main>
-    <a name="main"></a>
     <section class="hero">
       <div class="instagram hero__instagram">
         <a href="#" class="instagram__link">instagram</a>
       </div>
 
-      <div class="container">
+      <div class="hero__container">
         <div class="hero__content">
           <h1 class="title hero__title wow fadeInRight" data-wow-delay="0.1s">Спасибо за заявку!</h1>
           <p class="hero__text wow fadeInRight" data-wow-delay=" 0.3s">Наш менеджер перезвонит Вам в ближайшее время</p>
